--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
 streamlit==1.34.0
-geopandas==0.14.3
-folium==0.15.1
 streamlit-folium==0.16.0
-matplotlib==3.8.4
-shapely==2.0.3
-pyproj==3.6.1
-pandas==2.2.2
+# folium is installed by streamlit-folium in a compatible version
+matplotlib>=3.3
