--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit==1.34.0
 streamlit-folium==0.16.0
-# folium is installed by streamlit-folium in a compatible version
+# folium is handled by streamlit-folium in a compatible version
 matplotlib>=3.3
+geopandas==0.14.3
