--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ streamlit==1.34.0
 streamlit-folium==0.16.0
 matplotlib>=3.3
 geopandas==0.14.3
-fiona>=1.9.5  # explicitly set to ensure compatibility
+fiona>=1.9.5
