--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
+
 streamlit==1.34.0
 streamlit-folium==0.16.0
 matplotlib>=3.3
-geopandas==0.14.3
-fiona>=1.9.5,<1.10.0
-shapely==2.0.3
-pyproj==3.6.1
-pandas
+geopandas
